[package]
name = "nvdb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json"]}
serde = "1.0.138"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
