[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
# geomorph = "1.1.0"
mongodb = "2.3.0"
# once_cell = "1.13.0"
rust-analyzer = "0.0.1"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
tokio = "1.20.1"
# rocket = {version = "0.5.0-rc.2", features = ["json"]}
rocket = {version = "=0.5.0-rc.2", features = ["json", "tls"]}
geo = "0.22.1"
geo-types = "0.7.6"
rocket_okapi = { features = ["swagger", "rapidoc"]}
schemars = "0.7"

# okapi = { version = "0.4", features = ["derive_json_schema"]}
# rs_concaveman = "1.0.4"
reqwest = {version = "0.11.11", features = ["json"]}
dotenv = "0.15.0"
rocket_contrib = "0.4.11"
